fix: update main text alignment in style.css

--- a/style.css
+++ b/style.css
@@ -83,5 +83,6 @@ header {
     top: 0;
     z-index: 100;
 }
-#strony {
-    text-align: center;}
+main {
+    text-align: center;
+}
